[package]
name = "terminal_arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
dialoguer = "0.11"
console = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "0.8.0"
ratatui = "0.25.0"
crossterm = "0.27.0"
chrono = "0.4"
clap = "3.0"